[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Bar/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Bar/HealthBarGroup.gd" type="Script" id=2]
[ext_resource path="res://assets/Bar/BoxStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://src/Bar/FaseContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Bar/ClockContainer.tscn" type="PackedScene" id=5]

[node name="HealthBarGroup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopPanel" type="Panel" parent="."]
anchor_left = 0.004
anchor_top = 0.004
anchor_right = 1.0
anchor_bottom = 0.042
margin_left = 0.274041
margin_top = -0.140112
margin_right = -3.62994
margin_bottom = 23.0599
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="TopPanel"]
anchor_top = 0.147
anchor_right = 1.0
anchor_bottom = 0.927
margin_left = 3.74008
margin_top = 0.125113
margin_right = -8.26886
margin_bottom = 0.00511169
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ClockContainer" parent="TopPanel/HBoxContainer" instance=ExtResource( 5 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 500.0
margin_bottom = 35.0

[node name="FaseContainer" parent="TopPanel/HBoxContainer" instance=ExtResource( 4 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 503.0
margin_top = 0.0
margin_right = 1003.0
margin_bottom = 35.0

[node name="OverallBar" parent="TopPanel/HBoxContainer" instance=ExtResource( 1 )]
visible = false
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 501.0
margin_top = 17.0
margin_right = 501.0
margin_bottom = 17.0
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.5
label = "Sociedad"

[node name="BottomPanel" type="Panel" parent="."]
anchor_top = 0.955
anchor_right = 1.0
anchor_bottom = 0.992
margin_left = 4.37004
margin_top = -22.7401
margin_right = -3.62994
margin_bottom = 1.05988
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel"]
anchor_top = 0.147
anchor_right = 0.991
anchor_bottom = 0.907
margin_left = 3.74008
margin_top = -0.0218878
margin_right = -0.115967
margin_bottom = 0.0181084
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cultural" parent="BottomPanel/HBoxContainer" instance=ExtResource( 1 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 248.0
margin_bottom = 35.0
size_flags_horizontal = 7
multiplier = 0.5
label = "Cultural"
percentage = 0.1

[node name="Economico" parent="BottomPanel/HBoxContainer" instance=ExtResource( 1 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 251.0
margin_top = 0.0
margin_right = 500.0
margin_bottom = 35.0
size_flags_horizontal = 7
label = "Economico"
percentage = 0.3

[node name="Salud" parent="BottomPanel/HBoxContainer" instance=ExtResource( 1 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 503.0
margin_top = 0.0
margin_right = 751.0
margin_bottom = 35.0
size_flags_horizontal = 7
multiplier = -1.0
label = "Salud"
percentage = 0.4

[node name="Social" parent="BottomPanel/HBoxContainer" instance=ExtResource( 1 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 754.0
margin_top = 0.0
margin_right = 1003.0
margin_bottom = 35.0
size_flags_horizontal = 7
multiplier = -0.5
label = "Social"
percentage = 0.2
